--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
 services:
+  emonotes:
+    build: .
+    container_name: emonotes_app
+    env_file: .env
+    ports:
+      - 8080:8080
+    depends_on:
+      - postgres
+    restart: always
+
   postgres:
     image: postgres:16
     container_name: emonotes_postgres
     env_file: .env
-    ports:
-      - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
