--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
-
-// Библиотека для чтения .env файлов (чтобы работали переменные через ${...})
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.warrenstrange:googleauth:1.5.0'
 }
 
 tasks.named('test') {
