--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,19 @@
 services:
   emonotes:
     build: .
-    container_name: emonotes_app
+    container_name: emonotes_backend
     env_file: .env
     ports:
       - 8080:8080
     depends_on:
       - postgres
+    restart: always
+
+  frontend:
+    build: frontend/
+    container_name: emonotes_frontend
+    ports:
+      - "80:80"
     restart: always
 
   postgres:
