--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
 /gradlew text eol=lf
 *.bat text eol=crlf
 *.jar binary
+*.js linguist-detectable=false
+*.js linguist-vendored=false
+
+*.css linguist-detectable=false
+
+frontend/node_modules/* linguist-vendored
